[package]
name = "filterflow"
version = "0.1.0"
edition = "2024"

[dependencies]
# Runtime Assíncrono e HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Configuração, Serialização e Tipos
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
url = "2.5"

# Processamento de Dados
rss = "2.0"
regex = "1.10" # Ajustando a versão regex para o padrão Caret (1.x.x)

# Persistência
sled = "0.34"
once_cell = "1.21.3"
sitemap = "0.4.1"
async-recursion = "1.1.1"
